# jsonwspclient

./: .coveragerc  AUTHORS.rst  CHANGES.rst  LICENSE.txt  README.rst  poetry.toml  pyproject.toml  requirements-1.txt  setup.cfg  setup.py  testclient.py
docs/: Makefile  appendix.rst  conf.py  examples.rst  features.rst  index.rst  installation.rst
jsonwspclient/: __init__.py  jsonwspclient.py  jsonwspexceptions.py  jsonwspmultipart.py  jsonwspresponse.py  jsonwspservice.py  jsonwsputils.py  skeleton.py
tests/: conftest.py  test_jsonwspclient.py  test_skeleton.py  transfertest.py
tests/resource/: bintest-20-1.txt
